k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myipcontainer-service
  labels:
    app: myipcontainer
spec:
  selector:
    app: myipcontainer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
